--- a/Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj
+++ b/Source/Mosa.Kernel.x86/Mosa.Kernel.x86.csproj
@@ -66,6 +66,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
+    <Compile Include="VBE.cs" />
     <Compile Include="SSE.cs" />
     <Compile Include="IDTStack.cs" />
     <Compile Include="IOPort.cs" />
