--- a/Source/Mosa.VBEWorld.x86/Mosa.VBEWorld.x86.csproj
+++ b/Source/Mosa.VBEWorld.x86/Mosa.VBEWorld.x86.csproj
@@ -38,7 +38,7 @@
     <Compile Include="HAL\Hardware.cs" />
     <Compile Include="MosaLogo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VBE.cs" />
+    <Compile Include="VBEDisplay.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mosa.ClassLib\Mosa.ClassLib.csproj">
