--- a/Source/Mosa.Kernel.BareMetal/Mosa.Kernel.BareMetal.csproj
+++ b/Source/Mosa.Kernel.BareMetal/Mosa.Kernel.BareMetal.csproj
@@ -67,6 +67,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Alignment.cs" />
+    <Compile Include="PageTable.cs" />
+    <Compile Include="AddressRange.cs" />
+    <Compile Include="VirtualMemoryManager.cs" />
+    <Compile Include="PhysicalMemoryManager.cs" />
     <Compile Include="BootMemory\BootMemoryMapTable.cs" />
     <Compile Include="BootMemory\BootMemoryMapType.cs" />
     <Compile Include="Extension\IntPtrExtension.cs" />
