- Updated Visual Studio Project

--- a/Source/Mosa.Runtime.x64/Mosa.Runtime.x64.nuspec
+++ b/Source/Mosa.Runtime.x64/Mosa.Runtime.x64.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>Mosa.Runtime.x86</id>
-		<version>1.0.0.1</version>
+		<version>1.0.0.5</version>
 		<title>Mosa.Runtime.x64 Library</title>
 		<authors>MOSA Project</authors>
 		<owners>MOSA Project</owners>
@@ -10,13 +10,14 @@
 		<projectUrl>http://www.mosa-project.org</projectUrl>
 		<iconUrl>https://raw.githubusercontent.com/mosa/MOSA-Project/master/Source/Art/Mosa%20Icon.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<description>MOSA runtime libraries for x64 platform</description>
+		<summary>MOSA x64 Runtime Library</summary>
+		<description>MOSA Runtime Libraries x64 Platform</description>
 		<releaseNotes></releaseNotes>
-		<copyright>Copyright © 2017</copyright>
+		<copyright>Copyright © 2019</copyright>
 		<tags>MOSA Compiler</tags>
 		<dependencies>
-			<dependency id="Mosa.Korlib" version="1.0.0.1" />
-			<dependency id="Mosa.Runtime" version="1.0.0.1" />
+			<dependency id="Mosa.Korlib" version="1.0.0.5" />
+			<dependency id="Mosa.Runtime" version="1.0.0.5" />
 		</dependencies>
 	</metadata>
 	<files>
