--- a/Source/Mosa.ClassLib/Mosa.ClassLib.nuspec
+++ b/Source/Mosa.ClassLib/Mosa.ClassLib.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>Mosa.ClassLib</id>
-		<version>1.0.0.1</version>
+		<version>1.0.0.5</version>
 		<title>Mosa.ClassLib Library</title>
 		<authors>MOSA Project</authors>
 		<owners>MOSA Project</owners>
@@ -10,9 +10,10 @@
 		<projectUrl>http://www.mosa-project.org</projectUrl>
 		<iconUrl>https://raw.githubusercontent.com/mosa/MOSA-Project/master/Source/Art/Mosa%20Icon.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<description>MOSA common libraries</description>
+		<summary>MOSA Common Library</summary>
+		<description>MOSA Common Library</description>
 		<releaseNotes></releaseNotes>
-		<copyright>Copyright © 2017</copyright>
+		<copyright>Copyright © 2019</copyright>
 		<tags>MOSA Compiler</tags>
 	</metadata>
 	<files>
