--- a/Source/Mosa.Korlib/Mosa.Korlib.nuspec
+++ b/Source/Mosa.Korlib/Mosa.Korlib.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata minClientVersion="3.3.0">
 		<id>Mosa.Korlib</id>
-		<version>1.0.0.1</version>
+		<version>1.0.0.5</version>
 		<title>Mosa.Korlib Library</title>
 		<authors>MOSA Project</authors>
 		<owners>MOSA Project</owners>
@@ -10,9 +10,10 @@
 		<projectUrl>http://www.mosa-project.org</projectUrl>
 		<iconUrl>https://raw.githubusercontent.com/mosa/MOSA-Project/master/Source/Art/Mosa%20Icon.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<summary>MOSA Corlib</summary>
 		<description>MOSA implementation of corlib</description>
 		<releaseNotes></releaseNotes>
-		<copyright>Copyright © 2017</copyright>
+		<copyright>Copyright © 2019</copyright>
 		<tags>MOSA Compiler corlib</tags>
 	</metadata>
 	<files>
