--- a/Source/Mosa.Tools.Package/Mosa.Tools.Package.nuspec
+++ b/Source/Mosa.Tools.Package/Mosa.Tools.Package.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>Mosa.Tools.Package</id>
-		<version>$version$</version>
+		<version>1.0.0.5</version>
 		<title>Mosa.Tools.Package</title>
 		<authors>MOSA Project</authors>
 		<owners>MOSA Project</owners>
@@ -10,6 +10,7 @@
 		<projectUrl>http://www.mosa-project.org</projectUrl>
 		<iconUrl>https://raw.githubusercontent.com/mosa/MOSA-Project/master/Source/Art/Mosa%20Icon.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<summary>MOSA Tools Package</summary>
 		<description>MOSA Tools Package</description>
 		<releaseNotes></releaseNotes>
 		<copyright>Copyright © 2019</copyright>
@@ -23,6 +24,7 @@
 		<file src="..\..\bin\Mosa.Compiler.Common.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Compiler.Framework.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Compiler.MosaTypeSystem.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Compiler.Extension.Dwarf.dll" target="tools" />
 		<file src="..\..\bin\Mosa.DeviceSystem.dll" target="tools" />
 		<file src="..\..\bin\Mosa.FileSystem.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Platform.ARMv6.dll" target="tools" />
@@ -40,11 +42,12 @@
 		<file src="..\..\bin\Mosa.Utility.RSP.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Tool.Compiler.exe" target="tools" />
 		<file src="..\..\bin\SharpDisasm.dll" target="tools" />
+		<file src="..\..\bin\CommandLine.dll" target="tools" />
+		<file src="..\..\bin\Priority Queue.dll" target="tools" />
 		<file src="..\..\bin\MetroFramework.dll" target="tools" />
 		<file src="..\..\bin\MetroFramework.Design.dll" target="tools" />
 		<file src="..\..\bin\MetroFramework.Fonts.dll" target="tools" />
 		<file src="..\..\bin\WeifenLuo.WinFormsUI.Docking.dll" target="tools" />
 		<file src="..\..\bin\WeifenLuo.WinFormsUI.Docking.ThemeVS2015.dll" target="tools" />
-		<file src="..\..\bin\CommandLine.dll" target="tools" />
 	</files>
 </package>
