--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,9 +11,6 @@ shallow_clone: true
 
 build: off
 
-environment:
-  nuget:
-    secure: aTaYVizieVZLoxu3Cys6R6lAk3OvG5vtLp3ly4MBz6kwEr9I6HJfhFPNjeLpEa+Y
 for:
 
 # Windows Build - Visual Studio 2017:
@@ -59,7 +56,20 @@ for:
       assembly_informational_version: "{version}"
 
     artifacts:
-    - path: 'bin/MOSA Installer/MOSA-Installer.exe'
+    - path: 'bin/MOSA-Installer.exe'
+
+	deploy:
+		release: MOSA Project v$(appveyor_build_version)
+		description: 'MOSA Project v$(appveyor_build_version)'
+		provider: GitHub
+		auth_token:
+			secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07			
+		artifact: MOSA-Installer.exe            
+		draft: false
+		prerelease: false
+		on:
+			branch: master                 # release from master branch only
+#			APPVEYOR_REPO_TAG: true        # deploy on tag push only
 
 # Windows Build - Visual Studio 2019:
   -
@@ -104,7 +114,7 @@ for:
       assembly_informational_version: "{version}"
 
     artifacts:
-    - path: 'bin/MOSA Installer/MOSA-Installer.exe'
+#    - path: 'bin/MOSA Installer/MOSA-Installer.exe'
 
 # Linux Build:
   -
