--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,7 +69,7 @@ for:
       prerelease: true
       on:
         branch: master                 # release from master branch only
-#       APPVEYOR_REPO_TAG: true        # deploy on tag push only
+        APPVEYOR_REPO_TAG: true        # deploy on tag push only
 
 # Windows Build - Visual Studio 2019:
   -
@@ -90,8 +90,8 @@ for:
       publish_nuget: true
 
     after_build:
-#    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
-    - ps: ./mosactl.ps1 unittest
+    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
+#    - ps: ./mosactl.ps1 unittest
 #    - ps: ./mosactl.ps1 test
 
     build_script:
