--- a/appveyor.yml
+++ b/appveyor.yml
@@ -71,7 +71,6 @@ for:
       force_update: true
       on:
         branch: master                 # release from master branch only
-        APPVEYOR_REPO_TAG: true        # deploy on tag push only
 
 # Windows Build - Visual Studio 2019:
   -
@@ -92,7 +91,7 @@ for:
       publish_nuget: true
 
     after_build:
-    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
+#    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
 #    - ps: ./mosactl.ps1 unittest
 #    - ps: ./mosactl.ps1 test
 
