--- a/Source/Mosa.ClassLib/Mosa.ClassLib.nuspec
+++ b/Source/Mosa.ClassLib/Mosa.ClassLib.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>Mosa.ClassLib</id>
-		<version>1.0.0.5</version>
+		<version>$version$</version>
 		<title>Mosa.ClassLib Library</title>
 		<authors>MOSA Project</authors>
 		<owners>MOSA Project</owners>
