--- a/Source/Mosa.Runtime.x86/Mosa.Runtime.x86.nuspec
+++ b/Source/Mosa.Runtime.x86/Mosa.Runtime.x86.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>Mosa.Runtime.x86</id>
-		<version>1.0.0.5</version>
+		<version>$version$</version>
 		<title>Mosa.Runtime.x86 Library</title>
 		<authors>MOSA Project</authors>
 		<owners>MOSA Project</owners>
