--- a/Source/Mosa.VisualStudio.Template/MOSA Project/packages.config
+++ b/Source/Mosa.VisualStudio.Template/MOSA Project/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <packages>
 	<package id="Mosa.Korlib" version="1.0.0.5" targetFramework="net472" />
 	<package id="Mosa.Kernel.x86" version="1.0.0.5" targetFramework="net472" />
