--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,14 @@ image:
 shallow_clone: true
 
 build: off
+skip_tags: true
+
+assembly_info:
+  patch: true
+  file: **\AssemblyInfo.*
+  assembly_version: "{version}"
+  assembly_file_version: "{version}"
+  assembly_informational_version: "{version}"
 
 for:
 
@@ -48,28 +56,30 @@ for:
 
     test: off
 
-    assembly_info:
-      patch: true
-      file: AssemblyInfo.*
-      assembly_version: "{version}"
-      assembly_file_version: "{version}"
-      assembly_informational_version: "{version}"
-
     artifacts:
     - path: 'bin/MOSA-Installer.exe'
 
     deploy:
-      release: MOSA Project v$(appveyor_build_version)
-      description: 'MOSA Project v$(appveyor_build_version)'
-      provider: GitHub
-      auth_token:
-        secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-      artifact: 'bin/MOSA-Installer.exe'
-      draft: false
-      prerelease: true
-      on:
-        branch: master                 # release from master branch only
-#       APPVEYOR_REPO_TAG: true        # deploy on tag push only
+      - provider: GitHub
+        tag: Current
+        release: MOSA Project - Current Build
+        description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
+        auth_token:
+          secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
+        artifact: 'bin/MOSA-Installer.exe'
+        draft: false
+        prerelease: true
+        force_update: true
+        on:
+          branch: master                 # release from master branch only
+
+      - provider: NuGet
+        server:                  
+        api_key:
+          secure: aTaYVizieVZLoxu3Cys6R6lAk3OvG5vtLp3ly4MBz6kwEr9I6HJfhFPNjeLpEa+Y
+        skip_symbols: false
+        symbol_server:           
+        artifact: /.*\.nupkg/
 
 # Windows Build - Visual Studio 2019:
   -
@@ -91,7 +101,7 @@ for:
 
     after_build:
 #    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
-    - ps: ./mosactl.ps1 unittest
+#    - ps: ./mosactl.ps1 unittest
 #    - ps: ./mosactl.ps1 test
 
     build_script:
