--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ skip_tags: true
 
 assembly_info:
   patch: true
-  file: **\AssemblyInfo.*
+  file: AssemblyInfo.*
   assembly_version: "{version}"
   assembly_file_version: "{version}"
   assembly_informational_version: "{version}"
