--- a/Source/Mosa.Runtime.ARMv6/Mosa.Runtime.ARMv6.csproj
+++ b/Source/Mosa.Runtime.ARMv6/Mosa.Runtime.ARMv6.csproj
@@ -70,12 +70,16 @@
   <ItemGroup>
     <Compile Include="Native.cs" />
     <Compile Include="Internal.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj">
       <Project>{631bc4f3-e2d8-4319-814c-13904caa17ce}</Project>
       <Name>Mosa.Korlib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
