--- a/Source/Mosa.Korlib/Mosa.Korlib.csproj
+++ b/Source/Mosa.Korlib/Mosa.Korlib.csproj
@@ -59,8 +59,16 @@
     <Compile Include="System.IO\BinaryReader.cs" />
     <Compile Include="System.IO\MemoryStream.cs" />
     <Compile Include="System.Reflection\Assembly.cs" />
+    <Compile Include="System.Reflection\AssemblyCompanyAttribute.cs" />
+    <Compile Include="System.Reflection\AssemblyConfigurationAttribute.cs" />
+    <Compile Include="System.Reflection\AssemblyCopyrightAttribute.cs" />
+    <Compile Include="System.Reflection\AssemblyCultureAttribute.cs" />
     <Compile Include="System.Reflection\AssemblyDescriptionAttribute.cs" />
+    <Compile Include="System.Reflection\AssemblyFileVersionAttribute.cs" />
+    <Compile Include="System.Reflection\AssemblyProductAttribute.cs" />
     <Compile Include="System.Reflection\AssemblyTitleAttribute.cs" />
+    <Compile Include="System.Reflection\AssemblyTrademarkAttribute.cs" />
+    <Compile Include="System.Reflection\AssemblyVersionAttribute.cs" />
     <Compile Include="System.Reflection\CallingConventions.cs" />
     <Compile Include="System.Reflection\ConstructorInfo.cs" />
     <Compile Include="System.Reflection\CustomAttributeData.cs" />
@@ -93,6 +101,7 @@
     <Compile Include="System.Runtime.CompilerServices\RuntimeHelpers.cs" />
     <Compile Include="System.Runtime.InteropServices\CallingConvention.cs" />
     <Compile Include="System.Runtime.InteropServices\FieldOffsetAttribute.cs" />
+    <Compile Include="System.Runtime.InteropServices\GuidAttribute.cs" />
     <Compile Include="System.Runtime.InteropServices\LayoutKind.cs" />
     <Compile Include="System.Runtime.InteropServices\PreserveSigAttribute.cs" />
     <Compile Include="System.Runtime.InteropServices\StructLayoutAttribute.cs" />
