--- a/Source/Mosa.Korlib/Mosa.Korlib.csproj
+++ b/Source/Mosa.Korlib/Mosa.Korlib.csproj
@@ -237,7 +237,7 @@
     <!-- When Roslyn is NOT enabled, we need to set the module name for mscorlib -->
     <Touch Condition="'$(MSBuildToolsVersion)'&lt;'14.0'" Files="$(IntermediateOutputPath)\korlib.rsp" AlwaysCreate="true" />
     <!-- When Roslyn is enabled we need to set the runtimemetadataversion -->
-    <WriteLinesToFile Condition="'$(MSBuildToolsVersion)'&gt;='14.0'" File="$(IntermediateOutputPath)\korlib.rsp" Lines="/runtimemetadataversion:v1.0.0" Overwrite="true" />
+	<!-- WriteLinesToFile Condition="'$(MSBuildToolsVersion)'&gt;='14.0'" File="$(IntermediateOutputPath)\korlib.rsp" Lines="/runtimemetadataversion:v1.0.0" Overwrite="true" /> -->
     <ItemGroup>
       <Clean Include="$(IntermediateOutputPath)\korlib.rsp" />
     </ItemGroup>
