--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,14 +19,14 @@ assembly_info:
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
 
-dotnet_csproj:
-  patch: true
-  file: 'Source\*\*.csproj'
-  version: '{version}'
-  package_version: '{version}'
-  assembly_version: '{version}'
-  file_version: '{version}'
-  informational_version: '{version}'
+#dotnet_csproj:
+#  patch: true
+#  file: 'Source\*\*.csproj'
+#  version: '{version}'
+#  package_version: '{version}'
+#  assembly_version: '{version}'
+#  file_version: '{version}'
+#  informational_version: '{version}'
 
 for:
 
