--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,7 +37,8 @@ for:
         - image: Visual Studio 2017
 
     install:
-    - cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 5
+    - cmd: choco install InnoSetup
+    - cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 6
 
     before_build:
     - nuget restore -Verbosity quiet Source/Mosa.sln
@@ -111,7 +112,7 @@ for:
       publish_nuget: true
 
     after_build:
-#    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
+    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
 #    - ps: ./mosactl.ps1 unittest
 #    - ps: ./mosactl.ps1 test
 
@@ -135,7 +136,7 @@ for:
       assembly_informational_version: "{version}"
 
     artifacts:
-#   - path: 'bin/MOSA-Installer.exe'
+    - path: 'bin/MOSA-Installer.exe'
     - path: 'bin/mscorlib.dll'
 
 # Linux Build:
