--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,7 +38,7 @@ for:
 
     install:
     - cmd: choco install InnoSetup
-    - cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 6
+    - cmd: SET PATH=C:\Program Files (x86)\Inno Setup 6;%PATH%
 
     before_build:
     - nuget restore -Verbosity quiet Source/Mosa.sln
@@ -100,7 +100,7 @@ for:
 
     install:
     - cmd: choco install InnoSetup
-    - cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 6
+    - cmd: SET PATH=C:\Program Files (x86)\Inno Setup 6;%PATH%
 
     before_build:
     - nuget restore -Verbosity quiet Source/Mosa.sln
