--- a/Source/Mosa.Korlib/Mosa.Korlib.nuspec
+++ b/Source/Mosa.Korlib/Mosa.Korlib.nuspec
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0"?>
 <package >
-	<metadata minClientVersion="3.3.0">
+	<metadata>
 		<id>Mosa.Korlib</id>
 		<version>$version$</version>
 		<title>Mosa.Korlib Library</title>
