--- a/Source/Mosa.Korlib/Mosa.Korlib.csproj
+++ b/Source/Mosa.Korlib/Mosa.Korlib.csproj
@@ -237,8 +237,7 @@
 		<!-- When Roslyn is NOT enabled, we need to set the module name for mscorlib -->
 		<Touch Condition="'$(MSBuildToolsVersion)'&lt;'14.0'" Files="$(IntermediateOutputPath)\korlib.rsp" AlwaysCreate="true" />
 		<!-- When Roslyn is enabled we need to set the runtimemetadataversion -->
-		<WriteLinesToFile Condition="'$(APPVEYOR_BUILD_VERSION)' == '' And '$(MSBuildToolsVersion)'&gt;='14.0'" File="$(IntermediateOutputPath)\korlib.rsp" Lines="/runtimemetadataversion:v1.0.2" Overwrite="true" />
-		<WriteLinesToFile Condition="'$(APPVEYOR_BUILD_VERSION)' != '' And '$(MSBuildToolsVersion)'&gt;='14.0'" File="$(IntermediateOutputPath)\korlib.rsp" Lines="/runtimemetadataversion:v$(APPVEYOR_BUILD_VERSION)" Overwrite="true" />
+		<WriteLinesToFile Condition="'$(MSBuildToolsVersion)'&gt;='14.0'" File="$(IntermediateOutputPath)\korlib.rsp" Lines="/runtimemetadataversion:v4.0.30319" Overwrite="true" />
 		<ItemGroup>
 			<Clean Include="$(IntermediateOutputPath)\korlib.rsp" />
 		</ItemGroup>
