--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,7 +73,7 @@ for:
     deploy:
       - provider: GitHub
         tag: Current
-        release: MOSA Project - Current Build
+        release: MOSA Project - Development Build
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
@@ -82,7 +82,19 @@ for:
         prerelease: true
         force_update: true
         on:
-          branch: master                 # release from master branch only
+          branch: master
+
+      - provider: GitHub
+        release: MOSA Project - Stable Build
+        description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
+        auth_token:
+          secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
+        artifact: 'bin/MOSA-Installer.exe'
+        draft: false
+        prerelease: false
+        force_update: true
+        on:
+          branch: stable
 
       - provider: NuGet
         server:                  
@@ -91,6 +103,8 @@ for:
         skip_symbols: false
         symbol_server:           
         artifact: /.*\.nupkg/
+		on:
+          branch: stable
 
 # Windows Build - Visual Studio 2019:
   -
