--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,9 +15,18 @@ skip_tags: true
 assembly_info:
   patch: true
   file: AssemblyInfo.*
-  assembly_version: "{version}"
-  assembly_file_version: "{version}"
-  assembly_informational_version: "{version}"
+  assembly_version: '{version}'
+  assembly_file_version: '{version}'
+  assembly_informational_version: '{version}'
+
+#dotnet_csproj:
+#  patch: true
+#  file: 'Source\*\*.csproj'
+#  version: '{version}'
+#  package_version: '{version}'
+#  assembly_version: '{version}'
+#  file_version: '{version}'
+#  informational_version: '{version}'
 
 for:
 
@@ -28,7 +37,8 @@ for:
         - image: Visual Studio 2017
 
     install:
-    - cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 5
+    - cmd: choco install InnoSetup
+    - cmd: SET PATH=C:\Program Files (x86)\Inno Setup 6;%PATH%
 
     before_build:
     - nuget restore -Verbosity quiet Source/Mosa.sln
@@ -42,7 +52,7 @@ for:
     after_build:
     - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
     - ps: ./mosactl.ps1 unittest
-#    - ps: ./mosactl.ps1 test
+#   - ps: ./mosactl.ps1 test
 
     build_script:
 
@@ -58,11 +68,12 @@ for:
 
     artifacts:
     - path: 'bin/MOSA-Installer.exe'
+    - path: 'bin/mscorlib.dll'
 
     deploy:
       - provider: GitHub
         tag: Current
-        release: MOSA Project - Current Build
+        release: MOSA Project - Development Build
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
@@ -71,7 +82,19 @@ for:
         prerelease: true
         force_update: true
         on:
-          branch: master                 # release from master branch only
+          branch: master
+
+      - provider: GitHub
+        release: MOSA Project - Stable Build
+        description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
+        auth_token:
+          secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
+        artifact: 'bin/MOSA-Installer.exe'
+        draft: false
+        prerelease: false
+        force_update: true
+        on:
+          branch: stable
 
       - provider: NuGet
         server:                  
@@ -80,6 +103,8 @@ for:
         skip_symbols: false
         symbol_server:           
         artifact: /.*\.nupkg/
+        on:
+          branch: stable
 
 # Windows Build - Visual Studio 2019:
   -
@@ -88,7 +113,8 @@ for:
         - image: Visual Studio 2019
 
     install:
-    - cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 6
+    - cmd: choco install InnoSetup
+    - cmd: SET PATH=C:\Program Files (x86)\Inno Setup 6;%PATH%
 
     before_build:
     - nuget restore -Verbosity quiet Source/Mosa.sln
@@ -100,9 +126,9 @@ for:
       publish_nuget: true
 
     after_build:
-#    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
-#    - ps: ./mosactl.ps1 unittest
-#    - ps: ./mosactl.ps1 test
+    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
+#   - ps: ./mosactl.ps1 unittest
+#   - ps: ./mosactl.ps1 test
 
     build_script:
 
@@ -124,7 +150,8 @@ for:
       assembly_informational_version: "{version}"
 
     artifacts:
-#    - path: 'bin/MOSA Installer/MOSA-Installer.exe'
+    - path: 'bin/MOSA-Installer.exe'
+    - path: 'bin/mscorlib.dll'
 
 # Linux Build:
   -
