--- a/appveyor.yml
+++ b/appveyor.yml
@@ -94,7 +94,7 @@ for:
         prerelease: false
         force_update: true
         on:
-          branch: Stable
+          tag: Stable
 
       - provider: NuGet
         server:                  
@@ -104,7 +104,7 @@ for:
         symbol_server:           
         artifact: /.*\.nupkg/
         on:
-          branch: Stable
+          tag: Stable
 
 # Windows Build - Visual Studio 2019:
   -
