--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,22 @@ shallow_clone: true
 build: off
 skip_tags: true
 
+assembly_info:
+  patch: true
+  file: AssemblyInfo.*
+  assembly_version: '{version}'
+  assembly_file_version: '{version}'
+  assembly_informational_version: '{version}'
+
+#dotnet_csproj:
+#  patch: true
+#  file: 'Source\*\*.csproj'
+#  version: '{version}'
+#  package_version: '{version}'
+#  assembly_version: '{version}'
+#  file_version: '{version}'
+#  informational_version: '{version}'
+
 for:
 
 # Windows Build - Visual Studio 2017:
@@ -21,7 +37,8 @@ for:
         - image: Visual Studio 2017
 
     install:
-    - cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 5
+    - cmd: choco install InnoSetup
+    - cmd: SET PATH=C:\Program Files (x86)\Inno Setup 6;%PATH%
 
     before_build:
     - nuget restore -Verbosity quiet Source/Mosa.sln
@@ -30,12 +47,18 @@ for:
       verbosity: minimal
       parallel: true
       project: Source/Mosa.sln
-      publish_nuget: true
+      publish_nuget: false
 
     after_build:
+    - cmd: nuget.exe pack Source/Mosa.Korlib/Mosa.Korlib.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
+    - cmd: nuget.exe pack Source/Mosa.Runtime/Mosa.Runtime.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
+    - cmd: nuget.exe pack Source/Mosa.Kernel.x86/Mosa.Kernel.x86.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
+    - cmd: nuget.exe pack Source/Mosa.Runtime.x86/Mosa.Runtime.x86.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
+    - cmd: nuget.exe pack Source/Mosa.ClassLib/Mosa.ClassLib.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
+    - cmd: nuget.exe pack Source/Mosa.Tools.Package/Mosa.Tools.Package.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
     - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
-    - ps: ./mosactl.ps1 unittest
-#    - ps: ./mosactl.ps1 test
+ #  - ps: ./mosactl.ps1 unittest
+#   - ps: ./mosactl.ps1 test
 
     build_script:
 
@@ -49,29 +72,36 @@ for:
 
     test: off
 
-    assembly_info:
-      patch: true
-      file: AssemblyInfo.*
-      assembly_version: "{version}"
-      assembly_file_version: "{version}"
-      assembly_informational_version: "{version}"
-
     artifacts:
-    - path: 'bin/MOSA-Installer.exe'
+    - path: 'bin/MOSA-Installer-*.exe'
+    - path: 'Mosa.*.nupkg'
 
     deploy:
       - provider: GitHub
         tag: Current
-        release: MOSA Project - Current Build
-        description: 'Build Version - v$(appveyor_build_version)'
+        release: MOSA Project - Development Build
+        description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: 'bin/MOSA-Installer.exe'
+        artifact: 'bin/MOSA-Installer-*.exe'
         draft: false
         prerelease: true
         force_update: true
         on:
-          branch: master                 # release from master branch only
+          branch: master
+
+      - provider: GitHub
+        tag: Stable
+        release: MOSA Project - Stable Build
+        description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
+        auth_token:
+          secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
+        artifact: 'bin/MOSA-Installer-*.exe'
+        draft: false
+        prerelease: false
+        force_update: true
+        on:
+          branch: Stable
 
       - provider: NuGet
         server:                  
@@ -80,6 +110,8 @@ for:
         skip_symbols: false
         symbol_server:           
         artifact: /.*\.nupkg/
+        on:
+          branch: Stable
 
 # Windows Build - Visual Studio 2019:
   -
@@ -88,7 +120,8 @@ for:
         - image: Visual Studio 2019
 
     install:
-    - cmd: SET PATH=%PATH%;C:\Program Files (x86)\Inno Setup 6
+    - cmd: choco install InnoSetup
+    - cmd: SET PATH=C:\Program Files (x86)\Inno Setup 6;%PATH%
 
     before_build:
     - nuget restore -Verbosity quiet Source/Mosa.sln
@@ -100,9 +133,10 @@ for:
       publish_nuget: true
 
     after_build:
-#    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
-#    - ps: ./mosactl.ps1 unittest
-#    - ps: ./mosactl.ps1 test
+    - cmd: nuget.exe pack Source/Mosa.Korlib/Mosa.Korlib.nuspec -Properties version=%APPVEYOR_BUILD_VERSION%
+    - cmd: ISCC.exe Source/Inno-Setup-Script/Mosa-Installer.iss
+#   - ps: ./mosactl.ps1 unittest
+#   - ps: ./mosactl.ps1 test
 
     build_script:
 
@@ -124,7 +158,7 @@ for:
       assembly_informational_version: "{version}"
 
     artifacts:
-#    - path: 'bin/MOSA Installer/MOSA-Installer.exe'
+    - path: 'bin/MOSA-Installer-*.exe'
 
 # Linux Build:
   -
