--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,8 +73,8 @@ for:
     test: off
 
     artifacts:
-    - path: 'bin\MOSA-Installer-*.exe'
-    - path: 'Mosa.*.nupkg'
+    - path: bin\MOSA-Installer-*.exe
+    - path: Mosa.*.nupkg
 
     deploy:
       - provider: GitHub
@@ -82,7 +82,7 @@ for:
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: 'MOSA-Installer-*.exe'
+        artifact: MOSA-Installer-*.exe
         draft: false
         prerelease: true
         force_update: true
@@ -95,7 +95,7 @@ for:
         description: 'Build Version - v$(APPVEYOR_BUILD_VERSION) at $(APPVEYOR_REPO_COMMIT_TIMESTAMP)'
         auth_token:
           secure: HtzY0gh/s1gwDx89ZAqSdizGGNuQiyzXopLyFWhlpfC91/QvljGfNSS2L86hrl07            
-        artifact: 'MOSA-Installer-*.exe'
+        artifact: MOSA-Installer-*.exe
         draft: false
         prerelease: false
         force_update: true
